i18n/ja/docusaurus-plugin-content-docs/version-19/ORDA/dsMapping.md
---
id: dsmapping
title: データモデルオブジェクト
---

ORDA は、下地である 4D ストラクチャーへの自動マッピングに基づいた技術です。 ORDA は、エンティティやエンティティセレクションオブジェクトを介してデータへのアクセスも提供します。 結果的に ORDA は、データモデルオブジェクト一式の形でデータベース全体を公開します。

## ストラクチャーマッピング

`ds` および `Open datastore` コマンドを使ってデータストアを呼び出すと、戻り値の [データストア](#データストア) オブジェクトには、対応する 4D ストラクチャーのテーブルとフィールドへの参照が属性として格納されています:

* テーブルはデータクラスへとマップされます。
* フィールドはストレージ属性へとマップされます。
* リレーションはリレーション属性へとマップされます。ストラクチャーエディター内で定義されたリレーション名はリレーション属性名として使用されます。

![](../assets/en/ORDA/datastoreMapping.png)

### 変換のルール

変換の際には以下のルールが適用されます:

* テーブル、フィールド、そしてリレーション名はオブジェクトプロパティ名へとマップされます。 それらの名前が標準のオブジェクト命名規則に則っているようにしてください ([識別子の命名規則](Concepts/identifiers.md) 参照)。
* データストアは単一のプライマリーキーを持つテーブルのみを参照します。 以下のテーブルは参照されません:
  * プライマリーキーがないテーブル
  * 複合プライマリーキーを持つテーブル
* [BLOB](Concepts/dt_blob.md) 型の属性はデータストア内では管理されません。 BLOB 型属性はエンティティ内で Null として返され、割り当てることができません。

> ORDA のデータストアマッピングでは、次のものは考慮されません:  
> 
> * テーブルあるいはフィールドの "非表示" オプション
> * `SET TABLE TITLES` あるいは `SET FIELD TITLES` を通して定義されたバーチャルストラクチャー
> * リレーションの "手動" あるいは "自動" プロパティ

### リモートデータストアの利用

`Open datastore` コマンドまたは [REST リクエスト](REST/gettingStarted.md) によってリモートデータストアにアクセスする場合、**RESTリソースとして公開** プロパティが設定されているテーブルとフィールドのみ利用可能です。

このプロパティは、データストアにデータクラスおよび属性として公開したい各テーブルおよびフィールドについて 4D ストラクチャーのレベルで設定する必要があります:

![](../assets/en/ORDA/ExposeDataclass.png)

### データモデルのアップデート

データベースストラクチャーレベルで変更がおこなわれると、カレントの ORDA モデルレイヤーは無効化されます。 これらの変更には、以下のものが含まれます:

* テーブル、フィールド、リレーションの追加または削除
* テーブル、フィールド、リレーションの名称変更
* フィールドの核となるプロパティ (型、重複不可、インデックス、自動インクリメント、null値サポートなど) の変更

カレントの ORDA モデルレイヤーが無効化されると、その後 4D または 4D Server のローカルの `ds` データストアを呼び出した時にモデルレイヤーが自動的に再読み込みされ、更新されます。 ただし、エンティティやエンティティセレクションなど、ORDA オブジェクトへの既存の参照は、再生成されるまではそれらが作成されたときのモデルを使用し続けるという点に注意してください。

また、アップデートされた ORDA モデルレイヤーは、以下のコンテキストにおいては自動的には利用可能にはなりません:

* 4D Server に接続したリモートの 4D -- リモートのアプリケーションはサーバーに再接続する必要があります
* `Open datastore` または [REST 呼び出し](REST/gettingStarted.md) を使用して開かれたリモートデータストア -- 新しいセッションを開く必要があります

## オブジェクトの定義

### データストア

データストアは、データベースへのインターフェースオブジェクトです。 データベース全体を反映したものをオブジェクトとしてビルドします。 データストアは **モデル** と **データ** から構成されています:

* モデルにはデータストアを構成するすべてのデータクラスが格納され、その詳細な情報も含まれます。 これはその下地にあるデータベース自体からは独立した存在です。
* データとは、そのモデル内で使用・保存される情報を指します。 たとえば、従業員の名前、住所、生年月日などはデータストア内で扱うことができるデータに含まれます。

データストア型オブジェクトは、[**データストア**](../API/DataStoreClass.md)クラスのメンバー関数およびプロパティを介して扱うことができます。

コード内で扱うにあたっては、データストアはオブジェクトであり、公開されているすべての [データクラス](#dataclass) をプロパティとして持ちます。

4D では次のデータストアを扱うことができます:

* カレント 4D データベースに基づいた、ローカルデータストア。 これは、`ds` コマンドで返されるメインデータストアです。
* リモートデータベースによって REST リソースとして公開された、一つ以上のリモートデータストア。 これらは、`Open datastore` コマンドで返されます。

データストアは単一の、ローカルあるいはリモートのデータベースを参照します。

データストアオブジェクト自身は、オブジェクトとしてコピーすることはできません:

```4d
$mydatastore:=OB Copy(ds) // null を返します
```

しかしながらデータストアプロパティは取得可能です:

```4d
 ARRAY TEXT($prop;0)
 OB GET PROPERTY NAMES(ds;$prop)
  // $prop にはすべてのデータクラスの名前が格納されます
```

メイン (デフォルト) のデータストアは `ds` コマンドを通して常に利用可能です。 `Open datastore` コマンドを使えば、あらゆるリモートデータストアを参照することができます。

### データクラス

データクラスとは、テーブルに相当するものです。 オブジェクトモデルとして使用され、リレーショナル属性 (データクラス間のリレーションに基づいてビルドされた属性) を含めてすべてのフィールドを属性として参照します。 リレーショナル属性はクエリにおいて通常の属性のように使用することができます。

データクラス型オブジェクトは、[**データクラス**](../API/DataClassClass.md)クラスのメンバー関数およびプロパティを介して扱うことができます。

4D プロジェクト内のすべてのデータクラスは、`ds` データストアのプロパティとして利用可能です。 `Open datastore` コマンドまたは [REST リクエスト](REST/gettingStarted.md) によってアクセスするリモートデータストアの場合、データストアのデータクラスとして公開したい各テーブルについて 4D ストラクチャーのレベルで **RESTリソースとして公開** プロパティを設定する必要があります。

たとえば、4D ストラクチャー内の以下のテーブルについて考えます。

![](../assets/en/ORDA/companyTable.png)

`Company` テーブルは `ds` データストア内のデータクラスとして自動的に利用可能です。 以下のように書くことができます:

```4d
var $compClass : cs.Company // Company クラスのオブジェクト変数として $compClass を宣言します
$compClass:=ds.Company // Company データクラスへの参照を $compClass に代入します
```

データクラスオブジェクトは以下のものを格納することができます:

* attributes
* リレーション属性

データクラスは実際のデータベースの概略を提供し、概念的なデータモデルの管理を可能にします。 データクラスはデータストアをクエリする唯一の方法です。 クエリは単一のデータクラスを通して実行されます。 クエリはデータクラスの属性およびリレーション属性名に基づいてビルドされます。 リレーション属性は、一つのクエリ内で複数のリンクされたテーブルを用いる手段です。

データクラスオブジェクト自身は、オブジェクトとしてコピーすることはできません:

```4d
$mydataclass:=OB Copy(ds.Employee) // null を返します
```

しかしながらデータクラスプロパティは取得可能です:

```code4d
ARRAY TEXT($prop;0)
OB GET PROPERTY NAMES(ds.Employee;$prop)
// $prop にはすべてのデータクラス属性の名前が格納されます
```

### 属性

データクラスプロパティは、下地にあるフィールドやリレーションを説明する属性オブジェクトです。 例:

```4d
 $nameAttribute:=ds.Company.name // クラス属性への参照
 $revenuesAttribute:=ds.Company["revenues"] // 別の書き方
```

このコードは、`$nameAttribute` および `$revenuesAttribute` に、`Company` クラスの name および revenues 属性の参照をそれぞれ代入します。 値を管理するためには、[エンティティ](#エンティティ) を使用する必要があります。 このシンタックスで返されるのは、属性内に保管されている値ではなく、[**属性のプロパティ**](../API/DataClassClass.md#attributename)を含む、属性自身の参照である点に留意してください。

テーブル内の適格なフィールドはすべて、親 [データクラス](#データクラス) の属性として利用可能です。 `Open datastore` コマンドまたは [REST リクエスト](REST/gettingStarted.md) によってアクセスするリモートデータストアの場合、データクラスの属性として公開したい各フィールドについて 4D ストラクチャーのレベルで **RESTリソースとして公開** プロパティを設定する必要があります。

#### ストレージ属性とリレーション属性

データクラス属性にはいくつかの種類があります。 ストレージ、リレートエンティティ、リレートエンティティズです。 スカラーである属性 (単一の値のみを提供するもの) は標準の 4D データ型 (整数、テキスト、オブジェクトなど) をサポートします。

* **ストレージ属性** は4D データベース内のフィールドに相当するもので、インデックスをつけることができます。 ストレージ属性に割り当てられた値は、保存時にエンティティの一部として保存されます。 ストレージ属性にアクセスしたとき、その値はデータストアから直接取り出されます。 ストレージ属性はエンティティを構成するもっとも基礎的な要素であり、名前とデータ型により定義されます。
* **リレーション属性** は他のエンティティへのアクセスを提供します。 リレーション属性は単一のエンティティ (あるいはエンティティなし) あるいはエンティティセレクション (0からNまでのエンティティ) のどちらかになります。 リレーション属性はリレーショナルストラクチャーの "クラシックな" リレーションに基づいており、リレートエンティティあるいはリレートエンティティズへの直接的なアクセスを提供します。 リレーション属性は、ORDA においては名前を使用することで直接的に利用可能です。

たとえば、以下の部分的なデータベースストラクチャーと、そのリレーションプロパティについて考えます:

![](../assets/en/ORDA/relationProperties.png)

すべてのストレージ属性は自動的に利用可能です:

* Project データクラス内: "ID", "name", および "companyID"
* Company データクラス内: "ID", "name", および "discount"

これに加えて、以下のリレーション属性もまた自動的に利用可能になります:

* Project データクラス内: "リレートエンティティ" 型の **theClient** 属性。 各 Project (クライアント) に対して最大 1つの Companyが あります。
* Company データクラス内: "リレートエンティティズ" 型の**companyProjects** 属性。 > データベースリレーションの手動あるいは自動プロパティは、ORDA においては何の効力も持ちません。
> データベースリレーションの手動あるいは自動プロパティは、ORDA においては何の効力も持ちません。

すべてのデータクラス属性はデータクラスのプロパティとして公開されています:

![](../assets/en/ORDA/dataclassProperties.png)

これらのオブジェクトは属性を表しますが、データへのアクセスは与えないという点に注意してください。 データの読み書きは [エンティティオブジェクト](entities.md#エンティティ属性の使用) を通しておこなわれます。

### Entity

エンティティとは、レコードに相当するものです。 実際にはデータベース内のレコードを参照するオブジェクトです。 エンティティは、[データクラス](#データクラス) のインスタンスとも解釈可能なオブジェクトです。 同時にエンティティは、データストアがもとにしているデータベースに相関するデータも格納しています。

エンティティの目的はデータの管理 (作成、更新、削除) です。 エンティティセレクションを用いてエンティティ参照を取得した場合、その参照にはエンティティセレクションについての情報も保持されるため、セレクションを走査することが可能です。

エンティティ型オブジェクトは、[**エンティティ**](../API/EntityClass.md)クラスのメンバー関数およびプロパティを介して扱うことができます。

エンティティオブジェクト自身は、オブジェクトとしてコピーすることはできません:

```4d
 $myentity:=OB Copy(ds.Employee.get(1)) // null を返します
```

しかしながらエンティティプロパティは取得可能です:

```4d
 ARRAY TEXT($prop;0)
 OB GET PROPERTY NAMES(ds.Employee.get(1);$prop)
  // $prop にはすべてのエンティティ属性の名前が格納されます
```

### エンティティセレクション

エンティティセレクションとは、同じデータクラスに所属する一つ以上のエンティティへの参照を格納しているオブジェクトのことです。 通常、クエリの結果として、あるいはリレーション属性の戻り値として作成されます。 エンティティセレクションは、データクラスから 0個、1個、あるいは X個のエンティティを格納することができます (X はデータクラスに格納されているエンティティの総数です)。

エンティティセレクション型オブジェクトは、[**エンティティセレクション**](../API/EntitySelectionClass.md)クラスのメンバー関数およびプロパティを介して扱うことができます。

例:


```4d
var $e : cs.EmployeeSelection // EmployeeSelection クラスのオブジェクト変数として $e を宣言します
$e:=ds.Employee.all() // 結果のエンティティセレクションへの参照を $e に代入します
```

エンティティセレクションは "順列あり" あるいは "順列なし" 状態のどちらかです ([後述参照](#エンティティセレクションの順列あり順列なし))。

> また、[どのように作成されたか](entities.md#共有可能追加可能なエンティティセレクション) に応じて、エンティティセレクションは "共有可能" あるいは "追加可能" 状態のどちらかです。

エンティティセレクションオブジェクト自身は、オブジェクトとしてコピーすることはできません:

```4d
 $myentitysel:=OB Copy(ds.Employee.all()) // null を返します
```

しかしながらエンティティセレクションプロパティは取得可能です:

```4d
 ARRAY TEXT($prop;0)
 OB GET PROPERTY NAMES(ds.Employee.all();$prop)
  // $prop にはエンティティセレクションのプロパティ名が格納されます
  // ("length", "00", "01"...)
```

#### エンティティセレクションの順列あり/順列なし

`orderBy( )` メソッドを使用した場合、あるいは特定のオプションを使用した場合は除き、4D ORDA は最適化の観点からデフォルトで順列なしのエンティティセレクションを作成します。 このドキュメントでは、指定されている場合を除き、"エンティティセレクション" は "順列なしのエンティティセレクション" を指すこととします。

順列ありのエンティティセレクションは、必要な場合において、あるいはオプションを使用して特別に要求した場合に限り作成されます。 たとえば、以下のような場合です:

* セレクション (タイプを問わず) に対して、あるいはデータクラスに対して `orderBy( )` を使った場合の戻り値
* `newSelection( )` メソッドに `dk keep ordered` オプションを渡した場合の戻り値

順列なしのエンティティセレクションは以下のような場合に作成されます:

* セレクション (タイプを問わず) に対して、あるいはデータクラスに対して標準の `query( )` を使った場合の戻り値
* オプションなしで `newSelection( )` メソッドを使用した場合の戻り値
* 任意の演算メソッド (or( ), and( ), minus( ) ) を使った場合の戻り値 (入力セレクションタイプは問いません)。
> 次のエンティティセレクションは常に **順列あり** となります:
> 
> * 4D Server からリモートクライアントに返されるエンティティセレクション
> * リモートデータストアにおいて作成されるエンティティセレクション

順列ありのエンティティセレクションが順列なしのエンティティセレクションになった場合、重複したエンティティ参照はすべて削除されます。
